Fixed a few little bugs with the bpm not showing and tab clicks being weird lookin good B)

--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -97,6 +97,7 @@ a {
 	color: white;
 	margin-right: 4px;
 	padding: 5px 0;
+	border-radius: 3px 3px 0 0;
 
 	cursor: pointer;
 
